tests/parse_only/errors/syn_lex/e9.src
.IPPcode21

ADD int@56 int@85 int@465
